== 0.9.8 XXXX-XX-XX

* ami-XXXX (32-bit) and ami-XXXX (64-bit)
* Incremental database backups instead of doing a full mysqldump each time (full backup is done nightly)
* Added monit monitoring daemon: monitors mysqld, apache, memcached and mongrels
* Enabled postfix by default, mail is delivered to admin user (or use new :admin_mail_forward_address option in deploy.rb to set an email address)
* Apache now supports SSL, set :ec2onrails[:enable_ssl] = true to enable and upload ssl cert & key (there is also a self-signed cert generated for each instance on first startup)
* Now installing rubygems from source instead of using Ubuntu package, updated to 1.1.0
* Apache now denies access to any file in a directory named .svn, to protect the subversion info of those who deploy with Capistrano "checkout" method
* Added force-proxy-request-1.0 and proxy-nokeepalive for proxy requests to mongrel to fix occasional "proxy: error reading status line from remote server" error (mongrel doesn't support keep-alive anyway), see apache bug #37770
* Increased default memcache size to 128m, and memcache now listens on all interfaces for clustered use
* Tuned MySQL setting defaults for better performance
* Database backup script now exits cleanly instead of failing if instance is not in database role
* Database backup and restore scripts now exit if already backing up or restoring.


== 0.9.7 2008-03-03

* ami-5c0aef35 (32-bit) and ami-540aef3d (64-bit)
* memcached installed, and capistrano tasks now support a new role named "memcache". Memcached won't run on hosts that aren't in the "memcache" role.
* New Capistrano task ec2onrails:get_public_key_from_server to copy the public key file from the server before first use.
* cap ec2onrails:server:install_gems can now install a specific version of a gem instead of the latest (use "gemname -v version" instead of "gemname" in deploy.rb)