@@ -32,20 +32,21 @@ module CommandLineArgs extend OptiFlagSet
   optional_flag "bucket"
   optional_flag "dir"
   optional_switch_flag "incremental"
+  optional_switch_flag "noreset"
   and_process!
 end
 
 # include the hostname in the bucket name so test instances don't accidentally clobber real backups
-bucket_suffix = ARGV.flags.bucket || Ec2onrails::Utils.hostname
+bucket = ARGV.flags.bucket
 dir = ARGV.flags.dir || "database"
-@s3 = Ec2onrails::S3Helper.new(bucket_suffix, dir)
+@s3 = Ec2onrails::S3Helper.new(bucket, dir)
 @mysql = Ec2onrails::MysqlHelper.new
-@temp_dir = "/tmp/ec2onrails-backup-#{bucket_suffix}-#{dir}"
+@temp_dir = "/tmp/ec2onrails-backup-#{@s3.bucket}-#{dir}"
 if File.exists?(@temp_dir)
   puts "Temp dir exists (#{@temp_dir}), aborting. Is another backup process running?"
   exit
 end
-  
+
 begin
   FileUtils.mkdir_p @temp_dir
   if ARGV.flags.incremental
@@ -56,13 +57,15 @@ begin
     logs_to_archive.each {|log| @s3.store_file log}
     @mysql.execute_sql "purge master logs to '#{File.basename(logs[-1])}'"
   else
-    # Full backup. Purge binary logs and do a mysqldump
+    # Full backup
     file = "#{@temp_dir}/dump.sql.gz"
-    @mysql.execute_sql "reset master"
-    @mysql.dump file
-    @mysql.execute_sql "purge master logs to 'mysql-bin.000002'"
-    @s3.store_file file
-    @s3.delete_files("mysql-bin")
+    unless ARGV.flags.noreset
+      @mysql.execute_sql "reset master"
+      @mysql.dump file
+      @mysql.execute_sql "purge master logs to 'mysql-bin.000002'"
+      @s3.store_file file
+      @s3.delete_files("mysql-bin")
+    end
   end
 ensure
   FileUtils.rm_rf(@temp_dir)
